wp-content/themes/sixgill/css/custom/desktop_general.css
/* General desktop styles */
@media only screen and (min-width : 1001px) {
	.global-social-buttons-list {
		margin-left:-16px !important;
	}

	#primary-menu {
		margin-left: 16px;
		opacity: 1 !important;
	}

	.marginShareButton {
		margin-left: 5px;
		list-style-type: none;
	}

	.subscribe-element {
		display: block;
	}

	.slider-caption.slider-caption-center {
		max-width: 900px;
	}

	.slider-caption p {
		margin-bottom: 10px;
		font-size: 36px;
		font-family: "Lato";
		margin-top: 10px;
	}

	.hidden-bottom-imageDiagram {
		display: none;
	}

	.logo-sixgill {
		width:140px;
		height:111px;
		background-image:url("/wp-content/themes/sixgill/images/td/logo/logo_desktop.svg");
	}

	.title-left-col {
		font-size:30px;
		padding-right:20px;
		text-align:right;
	}

	.my_iconSolution {
		width:115px;
	}

	.my_boxSolution_title {
		display: none;
	}

	.footer-learn-text, .footer-links-block {
		text-align:left;
		font-size:22px;
	}

	.footer-learn-text {
		width: inherit;
		margin-right: 0px;
	}

	.footer-links-block {
		margin-right: 0px;
		padding-right: 0px;
		width: inherit;
		margin-top: 5px;
	}

	.footer_Copy {
		padding-left: 0px;
		width: inherit;
		float: right;
	}

	.footer_Schedule {
		text-align:right;
		float: right;
		margin-top: 0px;
	}

	.homeSupTit-with-line {
		background-color: #fff;
		z-index:2;
	}

	.widgettitle {
		color: #004FC8;
	}

	.blog-list {
		padding-bottom:55px;
		width: 65%;
	}

	.shareIcons-desktop {
		display: block;
	}

	#aside-blog {
		margin-left: -90px;
	}

	.no-desktop-display,
	.display-only-mobile-portrait,
	.display-only-mobile-landscape,
	.display-only-tablet {
		display: none;
	}
}

